# pydanticai-tla-guard

./: .gitignore  AntigravityAgent.tla  LICENSE  README.md  TLA+_Validation_Report.md  app.py  demo.html  demo_cli.py  linkedin_context_report.md  pyproject.toml  requirements.txt  tla_gen.py  workflow_viewer.html  x_thread_draft.md
antigravity-tla-guard/: SKILL.md
src/pydanticai_tla/: __init__.py  plugin.py  verifier.py
tests/: test_verifier.py
