[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydanticai-tla"
version = "0.1.1"
description = "Formal mathematical verification (TLA+) guardrails for PydanticAI agents."
readme = "README.md"
authors = [
    { name = "MuLIAICHI" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydanticai_tla"]
